# wayscriber

./: .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  clean.sh  config.example.toml  flake.nix  let_chain
.github/: AGENTS.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build-packages.yml  ci.yml
configurator/: AGENTS.md  Cargo.toml  README.md
configurator/src/: AGENTS.md  app.rs  main.rs  messages.rs  test_temp.rs
configurator/src/app/: AGENTS.md  blocking_jobs.rs  entry.rs  io.rs  mod.rs  scroll.rs  session_catalog.rs  state.rs  subscription.rs  update.rs
configurator/src/app/daemon_setup/: AGENTS.md  command.rs  hyprland.rs  mod.rs  service.rs  shortcut.rs
configurator/src/app/daemon_setup/hyprland/: tests.rs
configurator/src/app/search/: mod.rs  summary.rs  terms.rs  tests.rs  types.rs
configurator/src/app/session_catalog/: AGENTS.md  duplicate.rs  move_file.rs  tests.rs
configurator/src/app/update/: AGENTS.md  boards.rs  color_picker.rs  config.rs  daemon.rs  fields.rs  mod.rs  presets.rs  render_profiles.rs  session_catalog.rs  tabs.rs
configurator/src/app/update/session_catalog/: tests.rs
configurator/src/app/view/: AGENTS.md  arrow.rs  board.rs  capture.rs  daemon.rs  drawing.rs  history.rs  keybindings.rs  mod.rs  performance.rs  presets.rs  render_profiles.rs  session.rs  tablet.rs  theme.rs  ui.rs  widgets.rs
configurator/src/app/view/boards/: item.rs  mod.rs
configurator/src/app/view/daemon/: tests.rs
configurator/src/app/view/drawing/: color.rs  font.rs  mod.rs
configurator/src/app/view/presets/: mod.rs  slot.rs
configurator/src/app/view/presets/slot/: color.rs  header.rs  mod.rs  rows.rs
configurator/src/app/view/ui/: click_highlight.rs  help_overlay.rs  mod.rs  presenter_mode.rs  status_bar.rs  toolbar.rs
configurator/src/app/view/widgets/: color_picker.rs  colors.rs  constants.rs  inputs.rs  labels.rs  mod.rs  validation.rs
configurator/src/app/view/widgets/color_picker/: canvas.rs  gradient.rs  inputs.rs  panel.rs
configurator/src/models/: AGENTS.md  color.rs  color_picker.rs  config.rs  daemon.rs  fields.rs  keybindings.rs  mod.rs  search.rs  session.rs  tab.rs  util.rs
configurator/src/models/color/: convert.rs  input.rs  mod.rs  named.rs  quad.rs  tests.rs  triplet.rs
configurator/src/models/config/: AGENTS.md  boards.rs  draft.rs  mod.rs  parse.rs  performance_fields.rs  presets.rs  quick_colors.rs  render_profiles.rs  setters.rs  tests.rs  to_config.rs  toolbar_overrides.rs
configurator/src/models/config/boards/: mapping.rs  validation.rs
configurator/src/models/config/draft/: from_config.rs  mod.rs
configurator/src/models/config/to_config/: board.rs  boards.rs  capture.rs  drawing.rs  export.rs  history.rs  keybindings.rs  mod.rs  performance.rs  presenter_mode.rs  presets.rs  session.rs  tablet.rs  ui.rs
configurator/src/models/fields/: AGENTS.md  board.rs  eraser.rs  export.rs  font.rs  mod.rs  presenter.rs  pressure.rs  session.rs  status.rs  tests.rs  theme.rs  toggles.rs  tool.rs  toolbar.rs
configurator/src/models/keybindings/: AGENTS.md  draft.rs  mod.rs  parse.rs  tests.rs
configurator/src/models/keybindings/field/: config.rs  labels.rs  list.rs  mod.rs  tab.rs
configurator/src/models/keybindings/field/config/: read.rs  write.rs
configurator/src/models/session/: tests.rs
core/: Cargo.toml
core/src/: build_info.rs  durable_io  durable_io.rs  env_vars.rs  label_format.rs  lib.rs  paths  render_profiles  render_profiles.rs  runtime_capabilities.rs  shortcut_hint.rs  systemd_user_service.rs  test_env.rs  test_temp.rs  time_utils.rs
core/src/draw/: mod.rs
core/src/input/: boards.rs  mod.rs  state.rs  tool.rs
core/src/session/: artifacts  artifacts.rs  catalog  catalog.rs  lock.rs  mod.rs  options  primary.rs
core/src/session/storage/: mod.rs  tool_state.rs  types.rs
docs/: AGENTS.md  CONFIG.md  SETUP.md  codebase-overview.md  daemon-protocol-v2.md
examples/: session-manager.md
packaging/: .SRCINFO  AGENTS.md  PKGBUILD  package.configurator.yaml  package.wayscriber.yaml  package.yaml  wayscriber-configurator.desktop  wayscriber.desktop  wayscriber.service
packaging/flatpak/: README.md  com.wayscriber.Wayscriber.metainfo.xml  com.wayscriber.Wayscriber.yaml
snap/: README.md  check-built-desktop.sh  smoke-check.sh  snapcraft.yaml
src/: AGENTS.md  about_window.rs  app.rs  app_id.rs  base64.rs  build_info.rs  canvas_export.rs  cli.rs  daemon.rs  durable_io.rs  env_vars.rs  file_uri.rs  image_decode.rs  label_format.rs  legacy.rs  lib.rs  logger.rs  main.rs  notification.rs  onboarding.rs  palette_recents.rs  paths.rs  render_profiles.rs  runtime_capabilities.rs  runtime_ui_state.rs  session_override.rs  shortcut_hint.rs  systemd_user_service.rs  test_env.rs  test_temp.rs  time_utils.rs  tray_action.rs  ui.rs  ui_text.rs  unix_signals.rs  util.rs  zbus_stream.rs
src/about_window/: AGENTS.md  clipboard.rs  handlers.rs  mod.rs  render.rs  state.rs
src/app/: AGENTS.md  env.rs  mod.rs  session.rs  usage.rs
src/backend/: AGENTS.md  common.rs  mod.rs  wayland.rs
src/canvas_export/: AGENTS.md  mod.rs  page.rs  pdf.rs  pdf_labels.rs  png.rs
src/capture/: AGENTS.md  clipboard.rs  dependencies.rs  desktop_backdrop.rs  file.rs  manager.rs  mod.rs  pipeline.rs  portal.rs  tests.rs  types.rs
src/cli/: tests.rs
src/config/: AGENTS.md  action_meta.rs  core.rs  document.rs  enums.rs  field_metadata.rs  io.rs  keybindings.rs  mod.rs  paths.rs  schema.rs  test_helpers.rs  tests.rs  types.rs  (+1 more)
tests/: AGENTS.md  cli.rs  daemon_v1_fixture.rs  input_ux.rs  ui.rs
tools/: AGENTS.md  README.md  build-package-repos.sh  build.sh  bump-version.sh  check-process-sites.py  check-rust-source-coverage.py  check-version-consistency.sh  code-health-report.sh  create-release-tag.sh  install-configurator.sh  install-gtk4-layer-shell.sh  install.sh  lint-and-test.sh  package.sh  publish-release-tag.sh  release-tag.sh  set-portal-shortcut.sh  tag-release.sh  test-package-repo-layout.sh  test.sh  update-aur-from-manifest.sh  update-aur.sh
(+1105 files in other folders)
