[package]
name = "wayscriber"
version = "0.9.17"
edition = "2024"
description = "Screen annotation tool for Wayland compositors"
homepage = "https://wayscriber.com"
repository = "https://github.com/devmobasa/wayscriber"

[workspace]
members = ["configurator"]
default-members = ["."]

[dependencies]
# Wayland
wayland-client = "0.31"
wayland-protocols = { version = "0.32", features = ["client", "unstable"] }
wayland-protocols-wlr = { version = "0.3", features = ["client"] }
smithay-client-toolkit = { version = "0.20", default-features = false, features = ["calloop", "xkbcommon"] }
calloop = "0.14"

# Cairo for drawing
cairo-rs = { version = "0.22", features = ["png"] }
cairo-sys-rs = "0.22"

# SVG icon rendering
resvg = "0.47"
tiny-skia = "0.12"

# Pango for advanced text rendering and font support
pango = "0.22"
pangocairo = "0.22"

# Utils
thiserror = "2.0"
log = "0.4"
env_logger = { version = "0.11", default-features = false }
clap = { version = "4.5", default-features = false, features = ["std", "derive", "help", "usage", "error-context"] }
anyhow = "1.0"
toml = "1.1"
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1"
schemars = { version = "1.2", features = ["derive"] }
libc = "0.2"
flate2 = "1.0"
time = { version = "0.3", features = ["formatting", "parsing", "local-offset"] }
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

# Daemon mode
signal-hook = "0.4"
ksni = { version = "0.3", optional = true }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "time", "sync"] }

# Screenshot capture
zbus = { version = "5.0", optional = true, default-features = false, features = ["tokio"] }
wl-clipboard-rs = "0.9.2"
futures = "0.3"
serde_json = "1.0"
png = "0.18"

[build-dependencies]
cfg_aliases = "0.2"

[features]
# Optional Wayland tablet/stylus input support (zwp_tablet_v2)
tablet-input = []
# D-Bus dependent functionality (portal capture, notifications, tray)
dbus = ["zbus"]
portal = ["dbus"]
tray = ["dbus", "ksni"]
default = ["tablet-input", "portal", "tray"]

[dev-dependencies]
tempfile = "3.10"
assert_cmd = "2.0"
predicates = "3.1"
