[package]
name = "wayscriber-configurator"
version = "0.9.21"
edition = "2024"
rust-version = "1.95"

[lints]
workspace = true

[dependencies]
# The configurator edits config and service files; it does not call portal D-Bus APIs directly.
wayscriber = { package = "wayscriber-core", path = "../core", default-features = false }
iced = { version = "0.14", default-features = false, features = ["tokio", "tiny-skia", "wayland"] }

[features]
default = ["tablet-input"]
tablet-input = ["wayscriber/tablet-input"]
