[package]
name = "wayscriber-configurator"
version = "0.9.22"
edition = "2024"
rust-version = "1.95"

[lints]
workspace = true

[dependencies]
# The configurator edits config and service files; it does not call portal D-Bus APIs directly.
wayscriber = { path = "..", default-features = false }
iced = { version = "0.14", default-features = false, features = ["tokio", "tiny-skia", "wayland"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "time", "sync"] }

[features]
default = ["tablet-input"]
tablet-input = ["wayscriber/tablet-input"]
