[package]
name = "wayscriber-core"
version = "0.9.21"
edition = "2024"
rust-version = "1.95"
description = "Shared wayscriber models and utility subsystems"
homepage = "https://wayscriber.com"
repository = "https://github.com/devmobasa/wayscriber"

[lints]
workspace = true

[dependencies]
log = { version = "0.4", features = ["std"] }
anyhow = "1.0"
toml = "1.1"
serde = { version = "1.0", features = ["derive"] }
schemars = { version = "1.2", features = ["derive"], optional = true }
libc = "0.2"
flate2 = "1.0"
serde_json = "1.0"

[features]
tablet-input = []
dbus = []
portal = ["dbus"]
tray = ["dbus"]
config-schema = ["dep:schemars"]
default = []
